Refactored strategy pattern in getAll method in MachineServiceImpl